trafik-ingress/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.sandbox.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
          namespace: argocd
    - kind: Rule
      match: Host(`argocd.sandbox.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          namespace: argocd
          scheme: h2c
