trafik-ingress/kargo-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kargo-server
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kargo.sandbox.com`)
      services:
        - name: kargo-api
          port: 80
          namespace: kargo
