trafik-ingress/longhorn-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`longhorn.sandbox.com`)
    services:
    - kind: Service
      name: longhorn-frontend
      namespace: longhorn-system
      port: 80
  tls:
    certResolver: default
